--- a/manuscript/manuscript.Rmd
+++ b/manuscript/manuscript.Rmd
@@ -45,7 +45,9 @@ numbersections: yes
 csl: "apa7.csl"
 documentclass: apa7
 classoption: man
-output: papaja::apa6_docx
+output:
+  papaja::apa6_docx: default
+  papaja::apa6_pdf: default
 ---
 
 
@@ -402,7 +404,7 @@ d %>%
 
 ### Cross-language phonological similarity (Levenshtein)
 
-We measured the phonological similarity between presented words and their target translation by computing the Levenshtein similarity between their IPA transcriptions using the `stringsim` function of the stringdist R package [@van2014stringdist]. This function computes the inverse of the Levenshtein distance between two character strings as a proportion. First, it computes the edit distance between two character strings (in this case, phoneme transcriptions) by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. This measure is then divided by the maximum distance (according to the length of the longest string) and then subtracted from 1. The result is a percentage score, with 0% indicating no similarity between the two strings, and 100% indicating a perfect match between the two strings. We computed this similarity measure (refred simply as Levenshtein, from now on) for every translation pair in our stimuli lists. For example, the *table* (teɪbəl)-*mesa* (mesa) translation pair had a `r percent(stringsim("teɪbəl", "mesa"))` similarity, while the *train* (trEIn)-*tren* (tɾEn) translation pair had a `r percent(stringsim("trEIn", "tɾEn"))` similarity. Figure 1 summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
+We measured the phonological similarity between presented words and their target translation by computing the Levenshtein similarity between their IPA transcriptions using the `stringsim` function of the stringdist R package [@van2014stringdist]. This function computes the inverse of the Levenshtein distance between two character strings as a proportion. First, it computes the edit distance between two character strings (in this case, phoneme transcriptions) by counting the number of additions, deletions, and substitutions necessary to make both strings identical [@levenshtein1966binary]. This measure is then divided by the maximum distance (according to the length of the longest string) and then subtracted from 1. The result is a percentage score, with 0% indicating no similarity between the two strings, and 100% indicating a perfect match between the two strings. We computed this similarity measure (refred simply as Levenshtein, from now on) for every translation pair in our stimuli lists. For example, the *table* (teɪbəl)-*mesa* (mesa) translation pair had a 17% similarity, while the *train* (trEIn)-*tren* (tɾEn) translation pair had a 60% similarity. Figure 1 summarises the lexical frequency, phonological neighbourhood density and phonological overlap of the words included in the Catalan and the Spanish lists.
 
 
 ## Data analysis
@@ -1032,7 +1034,7 @@ Overall, participants had `r percent(coefs$intercept["estimate"], accuracy = 0.0
 Spanish natives translating Catalan words were `r percent(coefs$group_en_gvs_spa["estimate"], accuracy = 0.01)` more accurate than English natives translating Spanish and Catalan words (95% *CrI* = [`r percent(coefs$group_en_gvs_spa["q2_5"], accuracy = 0.01)`, `r percent(coefs$group_en_gvs_spa["q97_5"], accuracy = 0.01)`], $BF_{\beta \neq 0}$ = `r printnum(h_group1)`). The interaction between this contrast and Levenshtein suggests a moderate impact of phonological similarity on the difference between Spanish and English participants: this difference increased in `r percent(coefs$lv_std_group_en_gvs_spa["estimate"], accuracy = 0.01)` for every one *SD* increment in Levenshtein similarity (95% *CrI* = [`r percent(coefs$lv_std_group_en_gvs_spa["q2_5"], accuracy = 0.01)`, `r percent(coefs$lv_std_group_en_gvs_spa["q97_5"], accuracy = 0.01)`], $BF_{\beta \neq 0}$ = `r printnum(h_lv_group1)`). English natives translating Catalan words were `r percent(abs(coefs$group_engmca_tvs_engmspa["estimate"]), accuracy = 0.01)` more accurate than those translating Spanish words (95% *CrI* = [`r percent(coefs$group_engmca_tvs_engmspa["q2_5"], accuracy = 0.01)`, `r percent(coefs$group_engmca_tvs_engmspa["q97_5"], accuracy = 0.01)`], $BF_{\beta \neq 0}$ = `r printnum(h_group2)`). For every one *SD* increment in Levenshtein similarity, the effect of presented language increased in `r percent(abs(coefs$lv_std_group_engmca_tvs_engmspa["estimate"]), accuracy = 0.01)` (95% *CrI* = [`r percent(coefs$lv_std_group_engmca_tvs_engmspa["q2_5"], accuracy = 0.01)`, `r percent(coefs$lv_std_group_engmca_tvs_engmspa["q97_5"], accuracy = 0.01)`], $BF_{\beta \neq 0}$ = `r printnum(h_lv_group1)`).
 
 
-```{r marginaleffects, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.width=7, fig.height=3.5, fig.cap="Expected mean posterior predictions from Model 4. A) Population-level predictions: the X-axis and the Y-axis represent the PTHN score (in standard deviations from the mean) and the probability of correct translation, respectively. We simulated 300 observations from the posterior distribution of the model: 100 simulations for translations with no similarity (0% Levenshtein), 100 simulations for translations with mean accuracy (20.51% Levenshtein), and 100 simulations for translations with the maximum observed accuracy (83.33% Levenshtein). We did this across the range of values of the PTHN scores. For each simulation, we drew a single sample from the posterior distribution of each coefficient. Each simulation is depicted in the graph as a line: pink for minimum similarity translations, blue for hight similarity translations, and yellow for maximum similarity translations. Black, thick lines indicate the expected mean value of the posterior predictions of the model for each condition. The dispersion of the lines indicates the uncertainty of our predictions. We computed these posterior predictions for each group of participants, and plot tem in separate panels."}
+```{r marginaleffects, echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE, fig.width=7, fig.height=3.5, fig.cap="Expected mean posterior predictions from Model 4. A) Population-level predictions: the X-axis and the Y-axis represent the PTHN score (in standard deviations from the mean) and the probability of correct translation, respectively. We simulated 300 observations from the posterior distribution of the model: 100 simulations for translations with no similarity (0% Levenshtein), 100 simulations for translations with mean similarity (20.51% Levenshtein), and 100 simulations for translations with the maximum similarity observed in the dataset (83.33% Levenshtein). These simulations were obtained for the range of values of the PTHN scores. For each simulation, we drew a single sample from the posterior distribution of each coefficient. Each simulation is depicted in the graph as a line: pink for minimum similarity translations, blue for hight similarity translations, and yellow for maximum similarity translations. Black, thick lines indicate the expected mean value of the posterior predictions of the model for each condition. The dispersion of the lines indicates the uncertainty of our predictions. We computed these posterior predictions for each group of participants, and plot tem in separate panels."}
 
 nd <- expand.grid(
 	lv_std = c(
